update: Runner登録トークン払い出し機能の追加
