# dashboard/model/custom/gitHubRegistrationTokenRequest.go
@@ -1,0 +1,6 @@
+package custom
+
+type GitHubRegistrationTokenRequest struct {
+	OrganizationName string `json:"organization_name"`
+	OrganizationKey  string `json:"organization_key"`
+}
