# dashboard/model/custom/gitHubRegistrationTokenResponse.go
@@ -1,0 +1,10 @@
+package custom
+
+import (
+	"time"
+)
+
+type GitHubRegistrationTokenResponse struct {
+	Token      string     `json:"token"`
+	ExpriresAt *time.Time `json:"expires_at"`
+}
